test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_write_channel.draco
proc main() void :  write(chan; a); corp;
